--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.0",
+    "styled-components": "5.3.5",
     "usestate": "1.1.3"
   },
   "devDependencies": {
